syntax = "proto3";

package ride.trip.v1alpha1;

import "google/protobuf/timestamp.proto";
import "ride/trip/v1alpha1/types.proto";
import "ride/type/v1alpha1/types.proto";

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse) {}

  rpc GetTrip(GetTripRequest) returns (GetTripResponse) {}

  rpc GetTripUpdates(GetTripUpdatesRequest) returns (stream GetTripUpdatesResponse) {}

  rpc SendTripVerificationCode(SendTripVerificationCodeRequest) returns (SendTripVerificationCodeResponse) {}

  rpc StartTrip(StartTripRequest) returns (StartTripResponse) {}

  rpc CancelTrip(CancelTripRequest) returns (CancelTripResponse) {}

  rpc EndTrip(EndTripRequest) returns (EndTripResponse) {}
}

message CreateTripRequest {
  TripLocation origin = 1;
  TripLocation destination = 2;
  ride.type.v1alpha1.VehicleType vehicle_type = 3;
  TripType trip_type = 4;
  uint32 passengers = 5;
  repeated string skip_list = 6;
  string overview_polyline = 7;
}

message CreateTripResponse {
  string trip_id = 1;
}

message GetTripRequest {
  string trip_id = 1;
}

message GetTripResponse {
  Trip trip = 1;
}

message GetTripUpdatesRequest {
  string trip_id = 1;
}

message GetTripUpdatesResponse {
  Trip trip = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message SendTripVerificationCodeRequest{
  string trip_id = 1;
}

message SendTripVerificationCodeResponse{}

message StartTripRequest {
  string trip_id = 1;
  string verification_code = 2;
}

message StartTripResponse {}

message CancelTripRequest {
  string trip_id = 1;
}

message CancelTripResponse {}

message EndTripRequest {
  string trip_id = 1;
}

message EndTripResponse {}
